# 2048-lens

./: LICENSE  README.md  stack.yaml  twentyfortyeight-lens.cabal
src/: Main.hs
